@@ -33,4 +33,12 @@
 - (id) runGormPalettes: (id) sender;
 @end
 
+/*
+ * Functions for drawing knobs etc.
+ */
+void GormDrawKnobsForRect(NSRect aFrame);
+NSRect GormExtBoundsForRect(NSRect aFrame);
+IBKnobPosition GormKnobHitInRect(NSRect aFrame, NSPoint p);
+void GormShowFastKnobFills(void);
+
 #endif
