@@ -1,3 +1,8 @@
+Acknowledgements -
+
+Icons - Mostly by Andrew Lindsay.
+Code -  GormViewKnobs.m adapted from code by Gerrit van Dyk.
+
 
 8th December 1999
 
