@@ -1,3 +1,7 @@
+Mon Dec 13 20:04:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* GormViewKnobs.m: imported from IM
+
 Mon Dec 13 14:57:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Gorm.h: Added NSView additions
